# axiom-allocator

./: .gitignore  Makefile  Makefile.am  README  README.md  axal_run.sh  axiom_allocator.pc.in  configure.ac
debian/: .gitignore  control  libaxiom-allocator-dev.install  libaxiom-allocator-dev.install.x86  libaxiom-allocator.install  libaxiom-allocator.install.x86  rules
include/: axiom_allocator.h  axiom_allocator_l1.h  axiom_allocator_l2.h  axiom_allocator_protocol.h  dprintf.h
src/: Makefile.am  allocator.lds  allocator_x86.lds  axiom_allocator.c  axiom_allocator_l1_l2.h  axiom_allocator_l2_l3.h  axiom_hw_l3_allocator.c  axiom_l2_allocator.c  axiom_l2_allocator.h  axiom_l3_allocator.h  axiom_sw_l3_allocator.c
src/axiom_allocator_l1/: axiom_allocator_l1.c
src/axiom_allocator_l2/: axiom_allocator_l1_l2.c  axiom_allocator_l2.c  axiom_allocator_l2_l3.c
src/axiom_allocator_l3/: axiom_allocator_l2_l3.c  axiom_allocator_l3.h  axiom_allocator_l3_hw.c  axiom_allocator_l3_sw.c
test/: Makefile.am  axiom-allocator-test.c
